feat: adjust scenarios [skip-ci]